css/styles.css
body {
    font-family: "Montserrat";
}

#title {
    background-color: #ff4c68;
    color: white;
}

h1 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 900;
    font-size: 3.5rem;
    line-height: 1.5;
}

h2 {
    font-family: "Montserrat";
    font-weight: bold;
    font-size: 3rem;
    line-height: 1.5;
}

h3 {
    font-family: "Montserrat";
    font-weight: bold;
    font-size: 1.5rem;
}

p {
    color: #999999;
}

.container-fluid {
    padding: 3% 15%;
}

/* Navigation Bar */
.navbar {
    padding-bottom: 4.5rem;
}

.navbar-brand {
    font-family: "Ubuntu";
    font-size: 2.5rem;
    font-weight: bold;
}

.nav-item {
    padding: 18px;
}

.nav-link {
    font-size: 1.2rem;
    font-family: "Monserrat";
    font-weight: 300;
}

/* download-button */

.download-button {
    margin: 5% 3% 5% 0;
}

/* Title-Image */

.Title-Image {
    margin: auto;
    width: 60%;
    transform: rotate(25deg);
}

#features {
    padding: 7% 15%;
}

.features-box {
    text-align: center;
    padding: 5%;
}

.features-icon {
    color: #EF8172;
    font-size: 4rem;
    padding: 5%;

}

.features-icon:hover {
    color: #ff4c68;
}

.grid {
    display: grid;
    place-items: center;
}

/* Testimonial Section  */

#testimonials {
    text-align: center;
    background-color: #EF8172;
    color: #fff;
}

.testimonial-image {
    width: 11%;
    border-radius: 100%;
    padding: 20px;
}

.carousel-item {
    padding: 7% 15%;
}

#press {
    background-color: #EF8172;
    text-align: center;
    padding-bottom: 3%;
}

.press-logo {
    width: 15%;
    margin: 20px 20px 50px;
}

#pricing {
    padding: 100px;
}

.pricing-column {
    text-align: center;
    padding: 3% 2%;
}

